deploy/ovn/rendered/ovnkube-identity.yaml
# ovnkube-identity
# starts ovnkube-identity
# it is run on the master(s).
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: ovnkube-identity
  # namespace set up by install
  namespace: ovn-kubernetes
  annotations:
    kubernetes.io/description: |
      This DaemonSet launches the ovnkube-identity networking component on control-plane nodes.
spec:
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: ovnkube-identity
  updateStrategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ovnkube-identity
        name: ovnkube-identity
        component: network
        type: infra
        kubernetes.io/os: "linux"
    spec:
      priorityClassName: "system-cluster-critical"
      serviceAccountName: ovnkube-identity
      hostNetwork: true
      dnsPolicy: Default
      nodeSelector:
        node-role.kubernetes.io/control-plane: ""
        kubernetes.io/os: "linux"
      containers:
      - name: ovnkube-identity
        image: "ghcr.io/dasmlab/ovn-daemonset-fedora:dev"
        imagePullPolicy: "IfNotPresent"
        command: ["/root/ovnkube.sh", "ovnkube-identity"]
        securityContext:
          runAsUser: 0
        terminationMessagePolicy: FallbackToLogsOnError
        resources:
          requests:
            cpu: 100m
            memory: 300Mi
        volumeMounts:
          - mountPath: /etc/webhook-cert/
            name: webhook-cert
      volumes:
        - name: webhook-cert
          secret:
            secretName: ovnkube-webhook-cert
      tolerations:
      - operator: "Exists"

---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: ovn-kubernetes-admission-webhook-node
webhooks:
  - name: ovn-kubernetes-admission-webhook-node.k8s.io
    clientConfig:
      url: https://localhost:9443/node
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZFekNDQXZ1Z0F3SUJBZ0lVRkJ4L0ljQmlXUzJPUzkycEh3T0NhL1cxQVhBd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0dURVhNQlVHQTFVRUF3d09jMlZzWmkxemFXZHVaV1F0WTJFd0hoY05NalV4TVRBMU1UQTFOVFU1V2hjTgpNall4TWpFd01UQTFOVFU1V2pBWk1SY3dGUVlEVlFRRERBNXpaV3htTFhOcFoyNWxaQzFqWVRDQ0FpSXdEUVlKCktvWklodmNOQVFFQkJRQURnZ0lQQURDQ0Fnb0NnZ0lCQUtZaFkrL3ZsbkhuOXAvQzM4TVovaXZaWnpNRFVGZnAKZU0wZ0pHNWdDdkVSRFNvVFlxejFSSmN0WWJjZ3QzZUpYQU1CbWhkOUdsQURWckdsMEpLWjhwME5zd1NlL29Wbgp3OExTNWFRNHpR [...]
    admissionReviewVersions: ['v1']
    sideEffects: None
    rules:
      - operations: [ "UPDATE" ]
        apiGroups: ["*"]
        apiVersions: ["*"]
        resources: ["nodes/status"] # Using /status subresource doesn't protect from other users changing the annotations
        scope: "*"

# in non-ic environments ovnkube-node doesn't have the permissions to update pods
